adding visitor counter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,9 @@
   <body id="top">
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
-        <div class="py-3 clearfix">          
+        <div class="py-3 clearfix"> 
+          <p><i>This page has been viewed <a> <id="counter"> times</i></a></p>
+          <h1 class="site-title mb-0">Manish Singh</h1>         
           <div class="site-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -56,7 +58,12 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Manish Singh</h2>
         <p data-aos="fade-left" data-aos-delay="100">A Cloud Enthusiast</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a></div>
+
+
+        <div 
+        class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="manish-resume.pdf" target="_blank">Download CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a></div>
+
+
       </div>
     </div>
   </div>
@@ -200,9 +207,9 @@
           <div class="h5 mb-1">Technology Specialist <span class="text-muted h6">at McDermott International Inc</span></div>
           <div class="text-muted text-small mb-2">Dec, 2017 - Apr, 2019</div>
           <ul>
-            <li>Worked in IT Service Desk Level 2 w.r.t. ITIL best practices</li>
-            <li>Reporting Tools: CA Service Desk Manager, ServcieNow</li>
-            <li>User administration in <b>Active Directory</b></li>
+            <li>Worked as a Level 2 support engineer</li>
+            <li>Maintaining engineering application hosted in Azure env (IaaS) </li>
+            <li>User administration in <b>Azure Active Directory</b></li>
             <li>Worked as a part of the migration team; assisted users with <b>O365, SharePoint and domain migration</b></li>
           </ul>
         </div>
