--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="main.js"></script>
     <title>Manish Singh</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
@@ -28,7 +29,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="py-3 clearfix"> 
-          <p><i>This page has been viewed <a> <id="counter"> times</i></a></p>
+          <p>this page has been viewed <a id="counter"></a> times :) </p> 
           <h1 class="site-title mb-0">Manish Singh</h1>         
           <div class="site-nav">
             <nav role="navigation">
