Made updates to html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,8 +159,9 @@
           <li>Knowledge on <b>Azure Networking</b> (VNet Peering, S2S, P2S Connections)</li>
           <li>Understanding of <b>Load Balancers, Azure Traffic Manager, Azure Front Door, Application Gateways, NSGs, Virtual Machine Scale Sets</b></li>
           <li>Implementation of compliance via <b>Azure Policy</b></li>
-          <li>Hands-on experience on deploying infrastructure using <b>Terraform</b>. Strong understanding of Terraform <b>providers, variables, locals, meta-arguments</b>. Have successfully deployed 4-Tier Virtual Network in Azure with VMs inside it along with load balancers</li>
-          <li>Knowledge on <b>GCE, GKE, VPC, GCS, Stackdriver monitoring in GCP</b></li>
+          <li>Hands-on experience on deploying infrastructure using <b>Terraform</b>. Strong understanding of Terraform <b>providers, variables, locals, meta-arguments</b>. Have successfully deployed 3-Tier architecture in Azure with VMs inside it along with load balancers</li>
+          <li>–	Administrative experience in <b>Office 365</b></li>
+          <li>–	Knowledge on GCE, GKE, VPC, GCS, in GCP</b></li>
           <li>Learning <b>Docker and Azure Kubernetes Service (AKS)</b> for <b>containers deployment, management, and orchestration</b></li>
           <li>Basics of <b>Linux fundamentals</b></li>
         </ul>
