--- a/frontend/index.html
+++ b/frontend/index.html
@@ -342,7 +342,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/manishkr07" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/manishkr07" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/manishk07" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
